[gd_scene load_steps=3 format=3 uid="uid://c1gan7e0ld7ft"]

[ext_resource type="Theme" uid="uid://3b6jfloh1m1l" path="res://Resources/black_and_white_theme/black_and_white.tres" id="1_1ehe0"]
[ext_resource type="Script" uid="uid://dfvj4flq8vtk8" path="res://Scripts/main_menu.gd" id="1_48xlc"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1ehe0")
script = ExtResource("1_48xlc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -50.5
offset_right = 79.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Customization" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Customization
"

[node name="Upgrades" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Upgrades"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Saves" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Saves"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save & Exit"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Customization" to="." method="_on_costumization_pressed"]
[connection signal="pressed" from="VBoxContainer/Upgrades" to="." method="_on_upgrades_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Saves" to="." method="_on_saves_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
